Added a sp4cebar memory bank icon to the site home page and put the nav and aside items in ul tags

--- a/docs.html
+++ b/docs.html
@@ -12,9 +12,12 @@
 <body>
 	<header>
 		<nav>
-			<a href="https://sp4cebar.com/">Site Home</a>
-			<a href="./index.html">Generator Home</a>
+			<ul>
+				<li><a href="https://sp4cebar.com/">Site Home</a></li>
+				<li><a href="./index.html">Generator Home</a></li>
+			</ul>
 		</nav>
+		<img src="/assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
 		<h1>Documentation</h1>
 	</header>
 	<main>
@@ -750,8 +753,10 @@ output sizes: 4</pre>
 	</main>
 	<footer>
 		<aside>
-			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a>
-			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a>
+			<ul>
+				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues">Report Issue</a></li>
+				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator">Contribute</a></li>
+			</ul>
 		</aside>
 	</footer>
 </body>
