--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
 	<header>
 		<nav>
-			<a href="https://sp4cebar.com/">Home</a>
-			<a href="./docs.html">Documentation</a>
+			<ul>
+				<li><a href="https://sp4cebar.com/">Home</a></li>
+				<li><a href="./docs.html">Documentation</a></li>
+			</ul>
 		</nav>
+		<img src="/assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
 		<h1>Memory Bank Generator</h1>
 		<h2>For Survicalcraft</h2>
 	</header>
@@ -78,8 +81,10 @@
 	</main>
 	<footer>
 		<aside>
-			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues" target="_blank" rel="noopener noreferrer">Report Issue</a>
-			<a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator" target="_blank" rel="noopener noreferrer">Contribute</a>
+			<ul>
+				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator/issues" target="_blank" rel="noopener noreferrer">Report Issue</a></li>
+				<li><a href="https://github.com/SP4CEBARsystems/SC-Bank-Generator" target="_blank" rel="noopener noreferrer">Contribute</a></li>
+			</ul>
 		</aside>
 	</footer>
 	<iframe id="sandbox" class="hidden" sandbox="allow-scripts"></iframe>
