Enhanced the header of index and docs pages

--- a/docs.html
+++ b/docs.html
@@ -11,14 +11,13 @@
 
 <body>
 	<header>
+		<img src="assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
+		<h1 class="inline">Documentation</h1>
 		<nav>
 			<ul>
-				<li><a href="https://sp4cebar.com/">Site Home</a></li>
 				<li><a href="./index.html">Generator Home</a></li>
 			</ul>
 		</nav>
-		<img src="/assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
-		<h1>Documentation</h1>
 	</header>
 	<main>
 		<hr>
