--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 	<header>
+		<img src="assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
+		<h1 class="inline">Memory Bank Generator</h1>
+		<h2>For Survicalcraft</h2>
 		<nav>
 			<ul>
+				<li><b><a href="./docs.html">Click here to read the Documentation</a></b></li>
 				<li><a href="https://sp4cebar.com/">Home</a></li>
-				<li><a href="./docs.html">Documentation</a></li>
 			</ul>
 		</nav>
-		<img src="/assets/sp4cebar_memory_bank.png" alt="sp4cebar memory bank logo" class="inline">
-		<h1>Memory Bank Generator</h1>
-		<h2>For Survicalcraft</h2>
 	</header>
 	<main>
 		<hr />
