Changed the code section to be a real section with a hr and a h2 header

--- a/docs.html
+++ b/docs.html
@@ -88,11 +88,12 @@
 				</ul>
 			</p>
 		</section>
+		<hr>
 		<section id="examples">
-			<h3>Examples</h3>
+			<h2>Code Examples</h2>
 			<ol>
 				<li>
-					<h4>ROM Calculations</h4>
+					<h3>ROM Calculations</h3>
 					<ol>
 						<li>
 							addition
@@ -117,7 +118,7 @@ output sizes: INT_5</pre>
 					</ol>
 				</li>
 				<li>
-					<h4>ROM Conversions</h4>
+					<h3>ROM Conversions</h3>
 					<ol>
 						<li>
 							8-bit hexadecimal to 3 digit decimal display driver
@@ -171,7 +172,7 @@ output sizes: 8</pre>
 					</ol>
 				</li>
 				<li>
-					<h4>FSM Smart Counters</h4>
+					<h3>FSM Smart Counters</h3>
 					<ol>
 						<li>
 							8-bit incrementing counter that resets on the maximum value (aka "FF", "1111 1111").
@@ -254,7 +255,7 @@ output sizes: 6, 1</pre>
 					</ol>
 				</li>
 				<li>
-					<h4>Selector ROM</h4>
+					<h3>Selector ROM</h3>
 					<ol>
 						<li>
 							display
