Fixing the favicon not showing up on github pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bank Generator</title>
 	<link rel="stylesheet" href="./styles/styles.css">
-	<!-- <link rel="logo" type="image/x-icon" href="/assets/memory_bank_asset.png"> -->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 	<style>
 	</style>
 </head>
