--- a/docs.html
+++ b/docs.html
@@ -62,6 +62,7 @@
 		<section id="code">
 			<h2>Code</h2>
 			<p>
+				<h4>Code Format</h4>
 				Within the code field you can write a <a
 					href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">javascript</a> function.
 				The <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Functions">function</a> must take an <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array">array of numbers</a> and an optional number as parameters.
@@ -69,10 +70,13 @@
 				This optional number is the location index when you want many sets of banks with the same inputs each (called Selector ROM on this page) but you wont need it often.
 				The amount of numbers in the input and output arrays and the sizes in <a href="https://en.wikipedia.org/wiki/Bit">bits</a> of each number within the arrays are determined by the "input types" and "output types" text fields.
 				The amount of types within these type fields must match the amount of numbers within their corresponding arrays.
+				<h4>Schematic Format</h4>
 				<pre>(number[], number) => number[]</pre>
+				<h4>Format Example</h4>
 				<pre>([parameter1, parameter2, parameter3, parameter4], locationIndex) => {
 	return [parameter1, parameter2, parameter3, parameter4]
 }</pre>
+				<h3>Running Code</h3>	
 				When you press the run button, the function will be evaluated for every input of your memory bank, the
 				output of the function will be saved as memory bank data. It will be encoded in <a href="#types">data
 					types</a> and split over <a href="#data">digits</a>.
