--- a/docs.html
+++ b/docs.html
@@ -261,23 +261,28 @@ const underflowValue = position;</pre>
 							</ol>
 						</li>
 						<li>
-							<pre>([position, direction, reset]) => {
-	const maxPosition = 63;
-	const minPosition = 0;
-	if (reset != 0) {
-		position = 0;
-		direction = 0;
-	} else {
-		if (position >= maxPosition && direction == 0) {
-			direction = 1;
-		} else if (position <= minPosition && direction != 0) {
+								6-bit Pong Ball Controller FSM
+								<pre>
+	locations: 1
+	input sizes: 6, 1, 1
+	output sizes: 6, 1</pre>
+								<pre>([position, direction, reset]) => {
+		const maxPosition = 63;
+		const minPosition = 0;
+		if (reset != 0) {
+			position = 0;
 			direction = 0;
 		} else {
-			position += (direction != 0 ? -1 : 1);
+			if (position >= maxPosition && direction == 0) {
+				direction = 1;
+			} else if (position <= minPosition && direction != 0) {
+				direction = 0;
+			} else {
+				position += (direction != 0 ? -1 : 1);
+			}
 		}
-	}
-	return [position, direction];
-}</pre>
+		return [position, direction];
+	}</pre>
 						</li>
 					</ol>
 				</li>
