Update docs.html to fix broken tags

--- a/docs.html
+++ b/docs.html
@@ -298,7 +298,7 @@ output sizes: 4</pre>
 							<pre>([x], bankPosition) => {
 	return [x == bankPosition ? 0xf : 0x0];
 }</pre>
-         <h4>Configurations<h4/>
+         <h4>Configurations</h4>
          <ol>
            <li>
              8-bit Selector
@@ -337,7 +337,7 @@ output sizes: 4</pre>
 							<pre>
 locations: 16
 input sizes: 4, 4
-output sizes: 4</pre>([x, y], bankPosition) => {
+output sizes: 4</pre><pre>([x, y], bankPosition) => {
 	return [y == bankPosition ? x : 0x0];
 }</pre>
 						</li>
