--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 	</header>
 	<main>
-		<hr />
+		<hr/>
 		<section>
 			<h2>Code</h2>
 			<div class="space-Below generator-input-params">
@@ -33,7 +33,7 @@
 				<label for="outputSizesInput">output sizes or types</label>
 				<input id="outputSizes" name="outputSizesInput" value="5" placeholder="8"></input>
 			</div>
-			<label for="codeInput">code input</label>
+			<label for="codeInput">Code Input</label>
 			<div>
 				<textarea id="codeInput" name="codeInput" cols="40" rows="5" placeholder="([x, y]) => {return [x + y];}"></textarea>
 			</div>
