added an elapsed time display during data generation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			</div>
 			<button>Generate</button>
 			<p id="bank-statistics"></p>
+			<p>Elapsed: <span id="elapsed-time-display">N/A</span></p>
 			<p>Output: <span id="output">N/A</span></p>
 		</section>
 		<hr />
